--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "payload": "3.56.0",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "sharp": "0.34.2",
     "sonner": "^2.0.7",
