feat: implement events collection and integrate with frontend
- Add Events collection with fields for title, description, location, link and image
- Create payload-utils for fetching events data
- Update HomePage to fetch and display events in ExploreCarousel
- Modify TouristSiteCard to work with Event type
- Switch database from PostgreSQL to MongoDB
- Add i18n support with English and Portuguese languages
- Update dependencies including @payloadcms/db-mongodb and @payloadcms/translations

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@payloadcms/db-mongodb": "^3.56.0",
     "@payloadcms/db-postgres": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
     "@payloadcms/richtext-lexical": "3.56.0",
+    "@payloadcms/translations": "^3.56.0",
     "@payloadcms/ui": "3.56.0",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
