feat(storage): add uploadthing storage integration
- Replace payload-cloud plugin with uploadthing storage adapter
- Add upload configuration with file size limit
- Update media types with _key fields for uploadthing compatibility
- Add client-side upload handler for uploadthing

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "^3.56.0",
-    "@payloadcms/db-postgres": "3.56.0",
+    "@payloadcms/db-mongodb": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
     "@payloadcms/richtext-lexical": "3.56.0",
+    "@payloadcms/storage-uploadthing": "3.56.0",
     "@payloadcms/translations": "^3.56.0",
     "@payloadcms/ui": "3.56.0",
     "@radix-ui/react-dialog": "^1.1.15",
