--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
     "@payloadcms/db-mongodb": "3.56.0",
     "@payloadcms/next": "3.56.0",
     "@payloadcms/payload-cloud": "3.56.0",
